Add Initial Migration and Seeding Database

--- a/FitnessApp_PreslavZlatinov_19621621/appsettings.json
+++ b/FitnessApp_PreslavZlatinov_19621621/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Data Source=i5-3570-PC\\SQLEXPRESS;Initial Catalog=fitness-app-db;Integrated Security=True;Pooling=False;TrustServerCertificate=True"
+  },
   "AllowedHosts": "*"
 }
